# euro-roadtrip-advisor

./: .gitignore  125.md  135.md  README.md  app.py  auth.py  auth_config.yaml  db.py  ingest.py  map_utils.py  pyproject.toml  rag_pipeline.py  rag_pipeline_fast.py  requirements.txt  safety.py  toll_catalog.py  toll_estimate.py  tools.py
.streamlit/: config.toml
chroma_db/: chroma.sqlite3
data/: europe_driving_master.txt  scandinavia_driving_rules.txt  traveller_profiles.txt
eval/: golden_rag.jsonl  run_ragas.py
