[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.14",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    # ... other dependencies ...
    "pysqlite3-binary; sys_platform == 'linux'",
    "reportlab>=4.4.10",
    "protobuf<=3.20.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
]
