[project]
name = "project3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flexpolyline>=0.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "streamlit-authenticator>=0.4.2",
    "streamlit-folium>=0.27.2",
]
