[project]
name = "project3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flexpolyline>=0.1.0",
    "folium>=0.20.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langsmith>=0.8.1",
    "openai>=2.34.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "reportlab>=4.0.0",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "streamlit-authenticator>=0.4.2",
    "streamlit-folium>=0.27.2",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.4.3",
]
